--- a/templates/shop.html
+++ b/templates/shop.html
@@ -3,13 +3,48 @@
 
 {% block content %}
 <div class="shopping_page">
-<div class="shopping_page_heading">
-    <h1>This is the heading</h1>
-    <h3>Second heading</h3>
-</div>
+    <div class="shopping_page_heading">
+        <h1>This is the heading</h1>
+        <h3>Second heading</h3>
+    </div>
 
-<div class="shopping_page_grid">
-    <div class="product_entry">
+    <div class="shopping_page_grid">
+        <div class="product_entry">
+            <a href="/"><div class="product_layout">
+                <div class="product_image"><img src="static/images/red_roses.jpg"></div>
+            </div>
+                <div class="product_title">RED ROSES BOUQUET</div>
+                <div class="product_price">$49.95</div></a>
+        </div>
+            <div class="product_entry">
+        <a href="/"><div class="product_layout">
+            <div class="product_image"><img src="static/images/red_roses.jpg"></div>
+        </div>
+            <div class="product_title">RED ROSES BOUQUET</div>
+            <div class="product_price">$49.95</div></a>
+    </div>
+            <div class="product_entry">
+            <a href="/"><div class="product_layout">
+                <div class="product_image"><img src="static/images/red_roses.jpg"></div>
+            </div>
+                <div class="product_title">RED ROSES BOUQUET</div>
+                <div class="product_price">$49.95</div></a>
+    </div>
+            <div class="product_entry">
+        <a href="/"><div class="product_layout">
+            <div class="product_image"><img src="static/images/red_roses.jpg"></div>
+        </div>
+            <div class="product_title">RED ROSES BOUQUET</div>
+            <div class="product_price">$49.95</div></a>
+    </div>
+            <div class="product_entry">
+        <a href="/"><div class="product_layout">
+            <div class="product_image"><img src="static/images/red_roses.jpg"></div>
+        </div>
+            <div class="product_title">RED ROSES BOUQUET</div>
+            <div class="product_price">$49.95</div></a>
+    </div>
+                    <div class="product_entry">
         <a href="/"><div class="product_layout">
             <div class="product_image"><img src="static/images/red_roses.jpg"></div>
         </div>
@@ -17,7 +52,9 @@
             <div class="product_price">$49.95</div></a>
     </div>
 
-</div>
+    </div>
+
+
 </div>
 
 
