--- a/templates/header.html
+++ b/templates/header.html
@@ -23,7 +23,7 @@
 
     <div id="Celestia_Botanica_Title">
     <a href="/" class="title_link">
-        CELESTIA BOTANICA
+        <div id="site_title">Celestia Botanica</div>
         <div id="city_title">TAMPA</div>
     </a>
     </div>
