--- a/templates/hero.html
+++ b/templates/hero.html
@@ -1,12 +1,28 @@
+<!-- OLD HERO (commented out so you can easily revert) -->
+<!--
+<div class="hero_parent">
+    <img src="static/images/single_flower_hero_image_cropped.jpg">
 
-    <div class="hero_parent">
-        <img src="static/images/single_flower_hero_image_cropped.jpg">
-
-        <div id="hero_text">
-            For Moments Worth<br>Remembering
-            <p>Artisanal arrangements crafted with elegance</p>
-            <p>Delivered to your door or ready for pickup</p>
-            <button id="homepage_shop_button"><b>DISCOVER YOUR PERFECT BOUQUET</b></button>
-        </div>
-
+    <div id="hero_text">
+        For Moments Worth<br>Remembering
+        <p>Artisanal arrangements crafted with elegance</p>
+        <p>Delivered to your door or ready for pickup</p>
+        <button id="homepage_shop_button"><b>DISCOVER YOUR PERFECT BOUQUET</b></button>
     </div>
+</div>
+-->
+
+<!-- NEW HERO WITH VIDEO -->
+<div class="hero_parent">
+    <video autoplay muted loop playsinline>
+        <source src="static/images/Wedding_flower_video.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+
+    <div id="hero_text">
+        Flowers For Moments<br>Worth Remembering
+        <p>Artisanal arrangements crafted with elegance</p>
+        <p>Delivered to your door or ready for pickup</p>
+        <button id="homepage_shop_button"><b>DISCOVER YOUR PERFECT BOUQUET</b></button>
+    </div>
+</div>
