--- a/templates/shop.html
+++ b/templates/shop.html
@@ -4,8 +4,8 @@
 {% block content %}
 <div class="shopping_page">
     <div class="shopping_page_heading">
-        <h1>This is the heading</h1>
-        <h3>Second heading</h3>
+        <h1>Shop the Collection</h1>
+        <h3>From everyday elegance to meaningful occasions, our curated collection offers florals that make an impression without saying a word.</h3>
     </div>
 
     <div class="shopping_page_grid">
