--- a/templates/about.html
+++ b/templates/about.html
@@ -2,14 +2,17 @@
 {% block title %}About Celestia Botanica{% endblock %}
 
 {% block content %}
+
+
+
 <div class="about_page">
 
-
-
-    <!-- First Section: Our Story -->
     <section class="about_section">
-            <!-- Page Title with Gold Frame -->
     <h1 id="about_page_title">About Celestia Botanica</h1>
+        <div class="about_us_page_img_container">
+            <img src="../static/images/florist_arranging_bouquet.jpg" id="about_us_page_img">
+        </div>
+
         <div class="about_text">
             <h2>Our Story</h2>
             <p>Hi, I’m Ramish, and I started Celestia Botanica here in Tampa, Florida because I’ve always believed flowers have a way of making everyday life a little more beautiful. I wanted to create a space where people could enjoy elegant, thoughtfully designed arrangements without feeling like luxury was out of reach.</p>
@@ -20,10 +23,6 @@
 
             </div>
 
-                <div class="about_text">
-            <h2>Our Craft</h2>
-            <p>Every piece I make is designed with care and intention. I personally hand-select each flower from local, sustainable growers to make sure it’s fresh, vibrant, and just right for the arrangement. The result is something that doesn’t just look beautiful, it feels like it was made for you.</p>
-        </div>
                 <div class="about_text">
             <h2>What We Provide</h2>
             <p>Whether it’s for a wedding, a special event, or a heartfelt gift, my goal is to create arrangements that reflect who you are and what the moment means to you. I know that some floral companies charge far more than they should, so I wanted Celestia Botanica to offer something different — a way for people to experience stunning, high-quality floral designs that feel indulgent but remain attainable.</p>
