--- a/templates/hero.html
+++ b/templates/hero.html
@@ -20,9 +20,11 @@
     </video>
 
     <div id="hero_text">
-        Flowers For Moments<br>Worth Remembering
-        <p>Artisanal arrangements crafted with elegance</p>
-        <p>Delivered to your door or ready for pickup</p>
-        <button id="homepage_shop_button"><b>DISCOVER YOUR PERFECT BOUQUET</b></button>
+        For Moments Worth<br>Remembering
+        <p>FLORALS CRAFTED WITH ELEGANCE FOR EVERY OCCASION</p>
+
+
+
+        <button id="homepage_shop_button"><b>DISCOVER YOUR PERFECT ARRANGEMENT</b></button>
     </div>
 </div>
