--- a/templates/index.html
+++ b/templates/index.html
@@ -9,46 +9,57 @@
 
 
     <!--  Categories   -->
-    <div id="categories_title"><a href="/occasions">For Every Moment</a></div>
-<div class="categories">
-    <div id="category_1">
-        <img src="static/images/cropped_red_roses.jpg" alt="Category">
-        <div class="overlay-text"><a href="#">Luxury Arrangements</a></div>
+<div id="categories_section">
+  <div id="categories_background">
+    <div id="categories_wrapper">
+      <div id="categories_title">For Every Moment</div>
+
+      <div class="categories_frame">
+        <a href="/luxury-arrangements" class="category_card">
+          <img src="static/images/cropped_red_roses.jpg" alt="Luxury Arrangements">
+          <div class="category_name">LUXURY ARRANGEMENTS</div>
+        </a>
+        <a href="/seasonal-collections" class="category_card">
+          <img src="static/images/fall_flowers.jpg" alt="Seasonal Collections">
+          <div class="category_name">SEASONAL COLLECTIONS</div>
+        </a>
+        <a href="/occasions-celebrations" class="category_card">
+          <img src="static/images/wedding_bouquet.png" alt="Occasions & Celebrations">
+          <div class="category_name">OCCASIONS & CELEBRATIONS</div>
+        </a>
+        <a href="/exclusive-editions" class="category_card">
+          <img src="static/images/yellow_bouquet.jpg" alt="Exclusive Editions">
+          <div class="category_name">EXCLUSIVE EDITIONS</div>
+        </a>
+      </div>
     </div>
-    <div id="category_2">
-        <img src="static/images/fall_flowers.jpg" alt="Category">
-        <div class="overlay-text">Seasonal Collections</div>
-    </div>
-    <div id="category_3">
-        <img src="static/images/wedding_bouquet.png" alt="Category">
-        <div class="overlay-text">Occasions & Celebrations</div>
-    </div>
+  </div>
 </div>
+
 
     <!--  Other Sections -->
     <br>
     <br>
-    <div>Trending Bouquets(bouquets on carousel</div>
     <br>
 
 
-<div class="about_celestia_botanica">
-    <div id="about-image">
-        <img src="static/images/about_white_flowers.jpg" alt="White flower arrangement">
+<section class="celestia_story">
+  <div class="celestia_story_inner">
+    <div class="celestia_story_image">
+      <img src="static/images/about_white_flowers.jpg" alt="White flower arrangement">
     </div>
-    <div id="about-text">
-        <h3>The Celestia Botanica Difference</h3>
-        <p>
-            At Celestia Botanica, we believe flowers should feel as special as the moments they celebrate.
-            That’s why we partner with local growers to bring you arrangements that are fresh, thoughtful, and uniquely designed.
-            Our designs are made to feel personal, intentional, and unforgettable.
-            We carefully check each stem for quality, ensuring that every arrangement not only looks beautiful but also lasts longer.
-            We take pride in creating pieces that make a lasting impression long after the flowers are gone.
-            When you choose Celestia Botanica, you’re supporting local artisans, celebrating sustainable practices, and choosing a floral experience that feels truly one-of-a-kind.
-        </p>
+    <div class="celestia_story_text">
+      <h3>The Celestia Botanica Difference</h3>
+      <p>
+        At Celestia Botanica, we believe flowers should feel as special as the moments they celebrate.
+        That’s why we partner with local growers to bring you arrangements that are fresh, thoughtful, and uniquely designed.
+        Our designs are made to feel personal, intentional, and unforgettable.
+        Each stem is carefully chosen for quality and longevity.
+        When you choose Celestia Botanica, you’re supporting local artisans and a floral experience that feels truly one-of-a-kind.
+      </p>
     </div>
-
-</div>
+  </div>
+</section>
 
 
 
